[tool.poetry]
name = "prompt-generator"
version = "0.1.0"
description = ""
authors = ["Chris Nickerson <chris.nickerson@writer.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
anthropic = "^0.32.0"
python-dotenv = "^1.0.1"
asyncio = "^3.4.3"
writer-sdk = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"